Fixes some styles on mobile devices.

--- a/website/assets/css/main.scss
+++ b/website/assets/css/main.scss
@@ -6,6 +6,8 @@
 table {
   border-collapse: collapse;
   width: 100%;
+  display: block;
+  overflow-x: auto;
 }
 
 th,
